--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,6 @@
     "asgrim/ofxparser": "^1.1",
     "barracudanetworks/archivestream-php": "^1.0",
     "barryvdh/laravel-cors": "^0.9.1",
-    "barryvdh/laravel-debugbar": "~2.2",
     "barryvdh/laravel-ide-helper": "~2.2",
     "cardgate/omnipay-cardgate": "~2.0",
     "cerdic/css-tidy": "~v1.5",
@@ -50,10 +49,9 @@
     "ezyang/htmlpurifier": "~v4.7",
     "fotografde/omnipay-checkoutcom": "~2.0",
     "fruitcakestudio/omnipay-sisow": "~2.0",
-    "fzaninotto/faker": "^1.5",
     "gatepay/FedACHdir": "dev-master@dev",
     "google/apiclient": "^2.0",
-    "guzzlehttp/guzzle": "~6.0",
+    "guzzlehttp/guzzle": "^6.2",
     "incube8/omnipay-multicards": "dev-master",
     "intervention/image": "dev-master",
     "jaybizzle/laravel-crawler-detect": "1.*",
@@ -69,12 +67,12 @@
     "league/flysystem-rackspace": "~1.0",
     "league/fractal": "0.13.*",
     "lokielse/omnipay-alipay": "~1.4",
-    "maatwebsite/excel": "~2.0",
+    "maatwebsite/excel": "^2.1",
     "meebio/omnipay-creditcall": "dev-master",
     "meebio/omnipay-secure-trading": "dev-master",
     "mfauveau/omnipay-pacnet": "~2.0",
     "mpdf/mpdf": "6.1.3",
-    "nwidart/laravel-modules": "^1.14",
+    "nwidart/laravel-modules": "^1.27",
     "omnipay/2checkout": "dev-master#e9c079c2dde0d7ba461903b3b7bd5caf6dee1248",
     "omnipay/bitpay": "dev-master",
     "omnipay/braintree": "~2.0@dev",
@@ -86,8 +84,8 @@
     "predis/predis": "^1.1",
     "simshaun/recurr": "dev-master",
     "softcommerce/omnipay-paytrace": "~1.0",
-    "symfony/css-selector": "~3.0",
-    "turbo124/laravel-push-notification": "2.*",
+
+    "turbo124/laravel-push-notification": "^2.0",
     "vink/omnipay-komoju": "~1.0",
     "webpatser/laravel-countries": "dev-master",
     "websight/l5-google-cloud-storage": "dev-master",
@@ -95,10 +93,13 @@
     "wildbit/laravel-postmark-provider": "3.0"
   },
   "require-dev": {
+    "barryvdh/laravel-debugbar": "^2.2",
+    "fzaninotto/faker": "^1.6",
     "codeception/c3": "~2.0",
     "codeception/codeception": "2.3.3",
     "phpspec/phpspec": "~2.1",
     "phpunit/phpunit": "~4.0",
+    "symfony/css-selector": "~3.0",
     "symfony/dom-crawler": "~3.0"
   },
   "extra": {
