--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
   "authors": [],
   "config": {
     "preferred-install": "dist",
-    "sort-packages": true
+    "sort-packages": true,
+    "optimize-autoloader": true
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
@@ -16,46 +17,45 @@
     "ext-gmp": "*",
     "anahkiasen/former": "4.0.*@dev",
     "barracudanetworks/archivestream-php": "^1.0",
-    "barryvdh/laravel-cors": "^0.9.1",
-    "barryvdh/laravel-debugbar": "~2.2",
-    "barryvdh/laravel-ide-helper": "~2.2",
-    "cerdic/css-tidy": "~v1.5",
+    "barryvdh/laravel-cors": "^0.9.2",
+    "barryvdh/laravel-debugbar": "^2.4",
+    "barryvdh/laravel-ide-helper": "^2.3",
+    "cerdic/css-tidy": "^1.5",
     "chumper/datatable": "dev-develop#04ef2bf",
     "codedge/laravel-selfupdater": "5.x-dev",
-    "doctrine/dbal": "2.5.x",
-    "ezyang/htmlpurifier": "~v4.7",
-    "fzaninotto/faker": "^1.5",
-    "google/apiclient": "^1.0",
-    "guzzlehttp/guzzle": "~6.0",
+    "doctrine/dbal": "^2.5",
+    "ezyang/htmlpurifier": "^4.9",
+    "google/apiclient": "^1.1",
+    "guzzlehttp/guzzle": "^6.2",
     "intervention/image": "dev-master",
-    "jaybizzle/laravel-crawler-detect": "1.*",
+    "jaybizzle/laravel-crawler-detect": "^1.2",
     "jlapp/swaggervel": "master-dev",
-    "jonnyw/php-phantomjs": "4.*",
+    "jonnyw/php-phantomjs": "^4.5.1",
     "laracasts/presenter": "dev-master",
     "laravel/framework": "5.2.*",
-    "laravel/socialite": "~2.0",
-    "laravelcollective/bus": "5.2.*",
+    "laravel/socialite": "^2.0",
+    "laravelcollective/bus": "^5.2",
     "laravelcollective/html": "^5.2",
-    "league/flysystem-aws-s3-v3": "~1.0",
-    "league/flysystem-rackspace": "~1.0",
-    "league/fractal": "0.13.*",
-    "maatwebsite/excel": "~2.0",
-    "nwidart/laravel-modules": "^1.14",
-    "patricktalmadge/bootstrapper": "5.5.x",
+    "league/flysystem-aws-s3-v3": "^1.0",
+    "league/flysystem-rackspace": "^1.0",
+    "league/fractal": "^0.13",
+    "maatwebsite/excel": "^2.1",
+    "nwidart/laravel-modules": "^1.22",
+    "patricktalmadge/bootstrapper": "^5.5",
     "predis/predis": "^1.1",
     "rtconner/laravel-tagging": "^2.2",
     "simshaun/recurr": "dev-master",
-    "spatie/laravel-permission": "^2.3",
+    "spatie/laravel-permission": "^1.0",
     "thomaswelton/laravel-gravatar": "^1.0",
-    "turbo124/laravel-push-notification": "2.*",
+    "turbo124/laravel-push-notification": "^2.0",
     "watson/bootstrap-form": "^1.0",
     "webpatser/laravel-countries": "dev-master",
-    "websight/l5-google-cloud-storage": "^1.0",
+    "websight/l5-google-cloud-storage": "^1.1",
     "wepay/php-sdk": "^0.2",
-    "wildbit/laravel-postmark-provider": "3.0"
+    "wildbit/laravel-postmark-provider": "^3.0"
   },
   "require-dev": {
-    "fzaninotto/faker": "^1.4",
+    "fzaninotto/faker": "^1.6",
     "mockery/mockery": "^0.9",
     "codeception/c3": "~2.0",
     "codeception/codeception": "*",
