Quick commit : package version change for the forms and some CSS changes for the login form

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "php": ">=5.6.4",
     "ext-gd": "*",
     "ext-gmp": "*",
-    "anahkiasen/former": "4.0.*@dev",
+    "anahkiasen/former": "3.5.x-dev",
     "barracudanetworks/archivestream-php": "^1.0",
     "barryvdh/laravel-cors": "^0.9.2",
     "barryvdh/laravel-debugbar": "^2.4",
@@ -34,7 +34,7 @@
     "laracasts/presenter": "dev-master",
     "laravel/framework": "5.4.*",
     "laravel/socialite": "^2.0",
-    "laravelcollective/html": "^5.4",
+    "laravelcollective/html": "^5.4.2",
     "league/flysystem-aws-s3-v3": "^1.0",
     "league/flysystem-rackspace": "^1.0",
     "league/fractal": "^0.13",
