--- a/composer.json
+++ b/composer.json
@@ -51,7 +51,8 @@
     "webpatser/laravel-countries": "dev-master",
     "websight/l5-google-cloud-storage": "^2.0",
     "wepay/php-sdk": "^0.2",
-    "wildbit/laravel-postmark-provider": "^3.0"
+    "wildbit/laravel-postmark-provider": "^3.0",
+    "yajra/laravel-datatables-oracle": "^6.20"
   },
   "require-dev": {
     "codeception/c3": "~2.0",
