--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "laravel-elixir": "^6.0.0"
   },
   "dependencies": {
-    "grunt-dump-dir": "^0.1.2"
+    "grunt-dump-dir": "^0.1.2",
+    "node-sass": "^4.9.3"
   }
 }
