--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "barryvdh/laravel-cors": "*",
     "barryvdh/laravel-debugbar": "*",
     "barryvdh/laravel-ide-helper": "*",
-    "chumper/datatable": "*",
+    "chumper/datatable": "dev-datatable3",
     "cleverit/ubl_invoice": "*",
     "doctrine/dbal": "*",
     "dompdf/dompdf": "*",
@@ -33,9 +33,9 @@
     "fideloper/proxy": "*",
     "intervention/image": "*",
     "laracasts/presenter": "*",
-    "laravel/framework": "^6.0",
-    "laravel/helpers": "^1.7",
-    "laravel/tinker": "*",
+    "laravel/framework": "^7.0",
+    "laravel/helpers": "*",
+    "laravel/ui": "*",
     "laravelcollective/html": "*",
     "league/fractal": "*",
     "maatwebsite/excel": "*",
@@ -45,12 +45,12 @@
     "patricktalmadge/bootstrapper": "*",
     "predis/predis": "*",
     "santigarcor/laratrust": "*",
-    "turbo124/laravel-push-notification": "*",
     "webpatser/laravel-countries": "dev-master#75992ad"
   },
   "require-dev": {
     "filp/whoops": "*",
     "fzaninotto/faker": "*",
+    "laravel/tinker": "*",
     "mockery/mockery": "*",
     "nunomaduro/collision": "*",
     "phpunit/phpunit": "*"
