--- a/composer.json
+++ b/composer.json
@@ -21,39 +21,41 @@
   "prefer-stable": true,
   "require": {
     "php": "^7.1.3",
-    "anahkiasen/former": "*",
-    "barryvdh/laravel-cors": "*",
-    "barryvdh/laravel-debugbar": "*",
-    "barryvdh/laravel-ide-helper": "*",
+    "anahkiasen/former": ">=4.8.1",
+    "barryvdh/laravel-cors": ">=3",
+    "barryvdh/laravel-debugbar": ">=3.7",
+    "barryvdh/laravel-ide-helper": ">=2.14",
     "chumper/datatable": "dev-datatable3",
-    "cleverit/ubl_invoice": "*",
-    "doctrine/dbal": "*",
-    "dompdf/dompdf": "*",
-    "ezyang/htmlpurifier": "*",
-    "fideloper/proxy": "*",
-    "intervention/image": "*",
-    "laracasts/presenter": "*",
-    "laravel/framework": "^7.0",
-    "laravel/helpers": "*",
-    "laravel/ui": "*",
-    "laravelcollective/html": "*",
-    "league/fractal": "*",
-    "maatwebsite/excel": "*",
-    "mpdf/mpdf": "*",
-    "nesbot/carbon": "*",
-    "nwidart/laravel-modules": "*",
-    "patricktalmadge/bootstrapper": "*",
-    "predis/predis": "*",
-    "santigarcor/laratrust": "*",
+    "cleverit/ubl_invoice": ">=1.3",
+    "doctrine/dbal": ">=3.8.2",
+    "dompdf/dompdf": ">=2.0.4",
+    "ezyang/htmlpurifier": ">=4.17",
+    "fideloper/proxy": ">=4.4.2",
+    "guzzlehttp/guzzle": "^7.0",
+    "intervention/image": ">=2.7.2",
+    "laracasts/presenter": ">=0.2.6",
+    "laravel/framework": "^8.83.27",
+    "laravel/helpers": ">=1.7",
+    "laravel/ui": ">=3.4.6",
+    "laravelcollective/html": ">=6.4.1",
+    "league/fractal": ">=0.20.1",
+    "maatwebsite/excel": ">=3.1.53",
+    "mpdf/mpdf": ">=8.2.2",
+    "nesbot/carbon": ">=2.72.3",
+    "nwidart/laravel-modules": ">=8.6",
+    "patricktalmadge/bootstrapper": ">=5.12",
+    "predis/predis": ">=2.2.2",
+    "santigarcor/laratrust": ">=7.2",
     "webpatser/laravel-countries": "dev-master#75992ad"
   },
   "require-dev": {
-    "filp/whoops": "*",
-    "fzaninotto/faker": "*",
-    "laravel/tinker": "*",
-    "mockery/mockery": "*",
-    "nunomaduro/collision": "*",
-    "phpunit/phpunit": "*"
+    "facade/ignition": "^2.3.6",
+    "filp/whoops": ">=2.15.4",
+    "fakerphp/faker": ">=1.9.2",
+    "laravel/tinker": ">=2.9",
+    "mockery/mockery": ">=1.6.7",
+    "nunomaduro/collision": ">=5.11",
+    "phpunit/phpunit": ">=9.6.16"
   },
   "autoload": {
     "classmap": [
@@ -67,7 +69,9 @@
     ],
     "psr-4": {
       "App\\": "app/",
-      "Modules\\": "Modules/"
+      "Modules\\": "Modules/",
+      "Database\\Factories\\": "database/factories/",
+      "Database\\Seeders\\": "database/seeders/"
     },
     "files": [
       "app/Libraries/lib_autolink.php",
