--- a/composer.json
+++ b/composer.json
@@ -12,101 +12,112 @@
             "email": "hillelcoren@gmail.com"
         }
     ],
+    "config": {
+        "preferred-install": "dist",
+        "sort-packages": true,
+        "optimize-autoloader": true,
+        "allow-plugins": {
+            "codeception/c3": true
+        }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
-        "php": ">=7.3.0",
+        "php": "^7.4",
         "ext-gd": "*",
-        "ext-gmp": "*",
         "ext-json": "*",
         "ext-zip": "*",
-        "abdala/omnipay-pagseguro": "0.2",
-        "agmscode/omnipay-agms": "~1.0",
-        "anahkiasen/former": "4.*",
-        "andreas22/omnipay-fasapay": "1.*",
-        "asgrim/ofxparser": "^1.1",
-        "bacon/bacon-qr-code": "^1.0",
-        "barracudanetworks/archivestream-php": "^1.0",
-        "barryvdh/laravel-cors": "^1.0.6",
-        "barryvdh/laravel-debugbar": "~3.6.1",
-        "barryvdh/laravel-ide-helper": "~2.7",
-        "bramdevries/omnipay-paymill": "^1.0",
-        "cardgate/omnipay-cardgate": "~2.0",
-        "cerdic/css-tidy": "~v1.5",
-        "chumper/datatable": "dev-laravel6-support",
-        "cleverit/ubl_invoice": "1.*",
-        "codedge/laravel-selfupdater": "2.3.0",
+        "abdala/omnipay-pagseguro": "*",
+        "agmscode/omnipay-agms": "*",
+        "anahkiasen/former": "*",
+        "andreas22/omnipay-fasapay": "*",
+        "asgrim/ofxparser": "*",
+        "bacon/bacon-qr-code": "*",
+        "barracudanetworks/archivestream-php": "*",
+        "barryvdh/laravel-cors": "*",
+        "barryvdh/laravel-debugbar": "*",
+        "barryvdh/laravel-ide-helper": "*",
+        "bramdevries/omnipay-paymill": "*",
+        "cardgate/omnipay-cardgate": "*",
+        "cerdic/css-tidy": "*",
+        "chumper/datatable": "dev-laravel7-support",
+        "cleverit/ubl_invoice": "*",
+        "codedge/laravel-selfupdater": "*",
         "collizo4sky/omnipay-wepay": "dev-address-fix#942f3e0",
-        "delatbabel/omnipay-fatzebra": "dev-master",
-        "dercoder/omnipay-ecopayz": "~1.0",
-        "dercoder/omnipay-paysafecard": "dev-master",
-        "digitickets/omnipay-barclays-epdq": "~3.0",
-        "digitickets/omnipay-datacash": "~3.0",
-        "digitickets/omnipay-gocardlessv2": "dev-payment-fix",
-        "digitickets/omnipay-realex": "~5.0",
-        "doctrine/dbal": "2.6.x",
-        "dompdf/dompdf": "^2.0",
-        "ezyang/htmlpurifier": "~v4.7",
-        "fotografde/omnipay-checkoutcom": "~2.0",
-        "fruitcakestudio/omnipay-sisow": "~2.0",
-        "fzaninotto/faker": "^1.5",
-        "google/apiclient": "^2.0",
-        "guzzlehttp/guzzle": "^6.5",
-        "guzzlehttp/psr7": "1.8.5",
-        "intervention/image": "dev-master",
-        "jaybizzle/laravel-crawler-detect": "1.*",
-        "jlapp/swaggervel": "master-dev",
+        "delatbabel/omnipay-fatzebra": "*",
+        "dercoder/omnipay-ecopayz": "*",
+        "dercoder/omnipay-paysafecard": "*",
+        "digitickets/omnipay-barclays-epdq": "*",
+        "digitickets/omnipay-datacash": "*",
+        "digitickets/omnipay-gocardlessv2": "*",
+        "digitickets/omnipay-realex": "*",
+        "doctrine/dbal": "*",
+        "dompdf/dompdf": "*",
+        "ezyang/htmlpurifier": "*",
+        "fotografde/omnipay-checkoutcom": "*",
+        "fruitcakestudio/omnipay-sisow": "*",
+        "google/apiclient": "*",
+        "guzzlehttp/guzzle": "*",
+        "guzzlehttp/psr7": "*",
+        "intervention/image": "*",
+        "jaybizzle/laravel-crawler-detect": "*",
+        "jlapp/swaggervel": "*",
         "jonnyw/php-phantomjs": "dev-fixes",
-        "justinbusschau/omnipay-secpay": "~2.0",
+        "justinbusschau/omnipay-secpay": "*",
         "laracasts/presenter": "dev-master",
-        "laravel/framework": "^6.20",
-        "laravel/helpers": "^1.4",
-        "laravel/legacy-encrypter": "^1.0",
-        "laravel/socialite": "~4.4.1",
-        "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^6.2",
-        "league/csv": "^9.1",
-        "league/flysystem-aws-s3-v3": "~1.0",
-        "league/flysystem-rackspace": "~1.0",
-        "league/fractal": "0.13.*",
-        "lokielse/omnipay-alipay": "~1.4",
+        "laravel/framework": "^7.0",
+        "laravel/helpers": "*",
+        "laravel/legacy-encrypter": "*",
+        "laravel/socialite": "*",
+        "laravelcollective/html": "*",
+        "league/csv": "*",
+        "league/flysystem-aws-s3-v3": "*",
+        "league/flysystem-rackspace": "*",
+        "league/fractal": "*",
+        "lokielse/omnipay-alipay": "*",
         "maatwebsite/excel": "dev-php-fix",
-        "meebio/omnipay-creditcall": "dev-master",
-        "meebio/omnipay-secure-trading": "dev-master",
-        "mfauveau/omnipay-pacnet": "~2.0",
-        "mpdf/mpdf": "^8.0",
-        "nesbot/carbon": "^2.0",
+        "meebio/omnipay-creditcall": "*",
+        "meebio/omnipay-secure-trading": "*",
+        "mfauveau/omnipay-pacnet": "*",
+        "mpdf/mpdf": "*",
+        "nesbot/carbon": "*",
         "nwidart/laravel-modules": "2.0.*",
         "omnipay/authorizenet": "dev-solution-id as 2.5.0",
         "omnipay/bitpay": "dev-master",
-        "omnipay/braintree": "^1.1",
-        "omnipay/common": "2.5.2",
-        "omnipay/firstdata": "^2.4",
+        "omnipay/braintree": "*",
+        "omnipay/common": "*",
+        "omnipay/firstdata": "*",
         "omnipay/gocardless": "dev-master",
-        "omnipay/mollie": "3.*",
-        "omnipay/omnipay": "~2.3",
-        "omnipay/payfast": "~2.0",
-        "omnipay/stripe": "~2.0",
-        "patricktalmadge/bootstrapper": "5.12.x",
-        "pragmarx/google2fa-laravel": "0.1.4",
-        "predis/predis": "^1.1",
+        "omnipay/mollie": "*",
+        "omnipay/omnipay": "*",
+        "omnipay/payfast": "*",
+        "omnipay/stripe": "*",
+        "patricktalmadge/bootstrapper": "*",
+        "pragmarx/google2fa-laravel": "*",
+        "predis/predis": "*",
         "simshaun/recurr": "dev-master",
-        "softcommerce/omnipay-paytrace": "~1.0",
-        "stripe/stripe-php": "^7",
-        "superbalist/laravel-google-cloud-storage": "^2.2",
-        "symfony/css-selector": "~3.1",
-        "therobfonz/laravel-mandrill-driver": "~1.0",
+        "softcommerce/omnipay-paytrace": "*",
+        "stripe/stripe-php": "*",
+        "superbalist/laravel-google-cloud-storage": "*",
+        "symfony/css-selector": "*",
+        "therobfonz/laravel-mandrill-driver": "*",
         "turbo124/laravel-push-notification": "dev-master",
-        "vemcogroup/laravel-sparkpost-driver": "~2.0",
-        "vink/omnipay-komoju": "~1.0",
+        "vemcogroup/laravel-sparkpost-driver": "*",
+        "vink/omnipay-komoju": "*",
         "webpatser/laravel-countries": "dev-master#75992ad",
-        "wepay/php-sdk": "^0.2",
-        "wildbit/postmark-php": "^2.5"
+        "wepay/php-sdk": "*",
+        "wildbit/postmark-php": "*"
     },
     "require-dev": {
-        "symfony/dom-crawler": "~3.1",
-        "codeception/c3": "2.*",
-        "codeception/codeception": "2.*",
-        "phpspec/phpspec": "~6.1",
-        "phpunit/phpunit": "~5.7"
+        "codeception/c3": "*",
+        "codeception/codeception": "*",
+        "filp/whoops": "*",
+        "fakerphp/faker": "*",
+        "laravel/tinker": "*",
+        "phpspec/phpspec": "*",
+        "phpunit/phpunit": "*",
+        "rector/rector": "0.14.8",
+        "symfony/dom-crawler": "*"
     },
     "autoload": {
         "classmap": [
@@ -154,16 +165,6 @@
     },
     "replace": {
         "alfaproject/omnipay-skrill": "*"
-    },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "config": {
-        "preferred-install": "dist",
-        "sort-packages": true,
-        "optimize-autoloader": true,
-        "allow-plugins": {
-            "codeception/c3": true
-        }
     },
     "repositories": [
         {
