Upgraded to Laravel 7, prepare for Laravel 8

--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,9 @@
 {
     "name": "invoiceninja/invoiceninja",
     "description": "Invoices, expenses & time-tracking built with Laravel",
-    "keywords": [
-        "invoice",
-        "laravel"
-    ],
-    "license": "Attribution Assurance License",
-    "authors": [
-        {
-            "name": "Hillel Coren",
-            "email": "hillelcoren@gmail.com"
-        }
-    ],
+    "keywords": [],
+    "license": "",
+    "authors": [],
     "config": {
         "preferred-install": "dist",
         "sort-packages": true,
@@ -27,88 +19,54 @@
         "ext-gd": "*",
         "ext-json": "*",
         "ext-zip": "*",
-        "abdala/omnipay-pagseguro": "*",
-        "agmscode/omnipay-agms": "*",
         "anahkiasen/former": "*",
-        "andreas22/omnipay-fasapay": "*",
         "asgrim/ofxparser": "*",
         "bacon/bacon-qr-code": "*",
         "barracudanetworks/archivestream-php": "*",
         "barryvdh/laravel-cors": "*",
-        "barryvdh/laravel-debugbar": "*",
-        "barryvdh/laravel-ide-helper": "*",
-        "bramdevries/omnipay-paymill": "*",
-        "cardgate/omnipay-cardgate": "*",
         "cerdic/css-tidy": "*",
         "chumper/datatable": "dev-laravel7-support",
         "cleverit/ubl_invoice": "*",
         "codedge/laravel-selfupdater": "*",
-        "collizo4sky/omnipay-wepay": "dev-address-fix#942f3e0",
-        "delatbabel/omnipay-fatzebra": "*",
-        "dercoder/omnipay-ecopayz": "*",
-        "dercoder/omnipay-paysafecard": "*",
-        "digitickets/omnipay-barclays-epdq": "*",
-        "digitickets/omnipay-datacash": "*",
-        "digitickets/omnipay-gocardlessv2": "*",
-        "digitickets/omnipay-realex": "*",
         "doctrine/dbal": "*",
         "dompdf/dompdf": "*",
         "ezyang/htmlpurifier": "*",
-        "fotografde/omnipay-checkoutcom": "*",
-        "fruitcakestudio/omnipay-sisow": "*",
         "google/apiclient": "*",
         "guzzlehttp/guzzle": "*",
         "guzzlehttp/psr7": "*",
         "intervention/image": "*",
         "jaybizzle/laravel-crawler-detect": "*",
         "jlapp/swaggervel": "*",
-        "jonnyw/php-phantomjs": "dev-fixes",
-        "justinbusschau/omnipay-secpay": "*",
         "laracasts/presenter": "dev-master",
         "laravel/framework": "^7.0",
         "laravel/helpers": "*",
         "laravel/legacy-encrypter": "*",
         "laravel/socialite": "*",
+        "laravel/ui": "^2.0",
         "laravelcollective/html": "*",
         "league/csv": "*",
         "league/flysystem-aws-s3-v3": "*",
         "league/flysystem-rackspace": "*",
         "league/fractal": "*",
-        "lokielse/omnipay-alipay": "*",
         "maatwebsite/excel": "dev-php-fix",
-        "meebio/omnipay-creditcall": "*",
-        "meebio/omnipay-secure-trading": "*",
-        "mfauveau/omnipay-pacnet": "*",
         "mpdf/mpdf": "*",
         "nesbot/carbon": "*",
         "nwidart/laravel-modules": "2.0.*",
-        "omnipay/authorizenet": "dev-solution-id as 2.5.0",
-        "omnipay/bitpay": "dev-master",
-        "omnipay/braintree": "*",
-        "omnipay/common": "*",
-        "omnipay/firstdata": "*",
-        "omnipay/gocardless": "dev-master",
-        "omnipay/mollie": "*",
-        "omnipay/omnipay": "*",
-        "omnipay/payfast": "*",
-        "omnipay/stripe": "*",
         "patricktalmadge/bootstrapper": "*",
         "pragmarx/google2fa-laravel": "*",
         "predis/predis": "*",
         "simshaun/recurr": "dev-master",
-        "softcommerce/omnipay-paytrace": "*",
         "stripe/stripe-php": "*",
         "superbalist/laravel-google-cloud-storage": "*",
         "symfony/css-selector": "*",
         "therobfonz/laravel-mandrill-driver": "*",
-        "turbo124/laravel-push-notification": "dev-master",
         "vemcogroup/laravel-sparkpost-driver": "*",
-        "vink/omnipay-komoju": "*",
         "webpatser/laravel-countries": "dev-master#75992ad",
-        "wepay/php-sdk": "*",
         "wildbit/postmark-php": "*"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "*",
+        "barryvdh/laravel-ide-helper": "*",
         "codeception/c3": "*",
         "codeception/codeception": "*",
         "filp/whoops": "*",
