--- a/.env.bckp
+++ b/.env.bckp
@@ -1,13 +1,17 @@
 APP_NAME="AppName"
 APP_ENV=local
 APP_DEBUG=false
+APP_LOCALE=en
+DEBUGBAR_ENABLED=false
 APP_URL=http://invninj.test
 APP_KEY=base64:dOP3LOQ3/aGc/s4ttLq9rIgqYffGjWdRlNP1tqq/PQc=
 APP_CIPHER=AES-256-CBC
-APP_LOCALE=en
 
-DB_TYPE=mysql
+REQUIRE_HTTPS=false
+NINJA_PROD=false
+
 DB_STRICT=false
+DB_TYPE=mysql
 DB_HOST=mariadb
 DB_DATABASE=invninj_db
 DB_USERNAME=root
