upgraded to Laravel 10

--- a/composer.json
+++ b/composer.json
@@ -39,12 +39,12 @@
         "intervention/image-laravel": "*",
         "jlapp/swaggervel": "*",
         "laracasts/presenter": "dev-master",
-        "laravel/framework": "^9.0",
+        "laravel/framework": "^10.0",
         "laravel/helpers": "*",
         "laravel/legacy-encrypter": "*",
         "laravel/socialite": "*",
         "laravel/ui": "*",
-        "laravelcollective/html": "*",
+        "spatie/laravel-html": "*",
         "league/csv": "*",
         "league/fractal": "*",
         "maatwebsite/excel": "dev-php-fix",
@@ -69,14 +69,15 @@
         "barryvdh/laravel-ide-helper": "*",
         "codeception/c3": "*",
         "codeception/codeception": "*",
-        "filp/whoops": "*",
         "fakerphp/faker": "*",
+        "filp/whoops": "*",
+        "laravel/pint": "^1.18",
         "laravel/tinker": "*",
         "nunomaduro/collision": "^6.1",
         "phpspec/phpspec": "*",
         "phpunit/phpunit": "*",
         "rector/rector": "0.14.8",
-        "spatie/laravel-ignition": "^1.0",
+        "spatie/laravel-ignition": "*",
         "symfony/dom-crawler": "*"
     },
     "autoload": {
