--- a/composer.json
+++ b/composer.json
@@ -20,67 +20,67 @@
         "ext-gd": "*",
         "ext-json": "*",
         "ext-zip": "*",
-        "anahkiasen/former": "*",
-        "asgrim/ofxparser": "*",
-        "bacon/bacon-qr-code": "*",
-        "barracudanetworks/archivestream-php": "*",
+        "anahkiasen/former": ">=5",
+        "asgrim/ofxparser": ">=1.1.1",
+        "bacon/bacon-qr-code": ">=3.0.1",
+        "barracudanetworks/archivestream-php": ">=1.0.8",
         "barryvdh/laravel-cors": "*",
-        "cerdic/css-tidy": "*",
+        "cerdic/css-tidy": ">=2.1",
         "chumper/datatable": "dev-laravel-8-beyond",
-        "cleverit/ubl_invoice": "*",
-        "codedge/laravel-selfupdater": "^3.6",
-        "doctrine/dbal": "*",
-        "dompdf/dompdf": "*",
-        "ezyang/htmlpurifier": "*",
-        "google/apiclient": "*",
-        "guzzlehttp/guzzle": "^7.9",
-        "guzzlehttp/psr7": "*",
-        "intervention/image": "*",
-        "intervention/image-laravel": "*",
+        "cleverit/ubl_invoice": ">=1.3",
+        "codedge/laravel-selfupdater": "^3.9",
+        "doctrine/dbal": "^3.9",
+        "dompdf/dompdf": ">=3",
+        "ezyang/htmlpurifier": ">=4.17",
+        "google/apiclient": ">=2.17",
+        "guzzlehttp/guzzle": "^7.9.2",
+        "guzzlehttp/psr7": ">=2.7",
+        "intervention/image": ">=3.8",
+        "intervention/image-laravel": ">=1.3",
         "jlapp/swaggervel": "*",
         "laracasts/presenter": "dev-master",
-        "laravel/framework": "^10.0",
-        "laravel/helpers": "*",
-        "laravel/legacy-encrypter": "*",
-        "laravel/socialite": "*",
-        "laravel/ui": "*",
-        "spatie/laravel-html": "*",
-        "league/csv": "*",
-        "league/fractal": "*",
+        "laravel/framework": "^10.48",
+        "laravel/helpers": ">=1.7",
+        "laravel/legacy-encrypter": ">=1",
+        "laravel/socialite": ">=5.16",
+        "laravel/ui": ">=4.5.2",
+        "spatie/laravel-html": ">=3.5",
+        "league/csv": ">=9.16",
+        "league/fractal": ">=0.20.1",
         "maatwebsite/excel": "dev-php-fix",
-        "mpdf/mpdf": "*",
-        "nesbot/carbon": "*",
+        "mpdf/mpdf": ">=8.2.4",
+        "nesbot/carbon": ">=2.72.5",
         "nwidart/laravel-modules": "2.0.*",
         "patricktalmadge/bootstrapper": "dev-l10-compatibility",
-        "pragmarx/google2fa-laravel": "*",
-        "predis/predis": "*",
+        "pragmarx/google2fa-laravel": ">=2.2",
+        "predis/predis": ">=2.2.2",
         "simshaun/recurr": "dev-master",
-        "stripe/stripe-php": "*",
-        "symfony/css-selector": "*",
-        "symfony/http-client": "*",
-        "symfony/mailer": "*",
-        "symfony/postmark-mailer": "*",
-        "therobfonz/laravel-mandrill-driver": "*",
-        "vemcogroup/laravel-sparkpost-driver": "^5.0",
+        "stripe/stripe-php": ">=16.1",
+        "symfony/css-selector": ">=6.4.8",
+        "symfony/http-client": ">=6.4.12",
+        "symfony/mailer": ">=6.4.12",
+        "symfony/postmark-mailer": ">=6.4.8",
+        "therobfonz/laravel-mandrill-driver": ">=5.1",
+        "vemcogroup/laravel-sparkpost-driver": "^5.0.8",
         "webpatser/laravel-countries": "dev-master#75992ad"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "*",
-        "barryvdh/laravel-ide-helper": "*",
-        "codeception/c3": "*",
-        "codeception/codeception": "*",
-        "driftingly/rector-laravel": "^1.2",
-        "fakerphp/faker": "*",
-        "filp/whoops": "*",
-        "laravel/pint": "^1.18",
-        "laravel/tinker": "*",
-        "nunomaduro/collision": "^6.1",
-        "phpspec/phpspec": "*",
-        "phpunit/phpunit": "*",
-        "rector/rector": "*",
+        "barryvdh/laravel-debugbar": ">=3.14.3",
+        "barryvdh/laravel-ide-helper": ">=3.1",
+        "codeception/c3": ">=2.9",
+        "codeception/codeception": ">=5.1.2",
+        "driftingly/rector-laravel": "^1.2.4",
+        "fakerphp/faker": ">=1.23.1",
+        "filp/whoops": ">=2.16",
+        "laravel/pint": "dev-feat/blade",
+        "laravel/tinker": ">=2.10",
+        "nunomaduro/collision": "^6.4",
+        "phpspec/phpspec": ">=7.5",
+        "phpunit/phpunit": ">=10.5.35",
+        "rector/rector": ">=1.2.6",
         "rector/type-perfect": "^1.0",
-        "spatie/laravel-ignition": "*",
-        "symfony/dom-crawler": "*"
+        "spatie/laravel-ignition": ">=2.8",
+        "symfony/dom-crawler": ">=6.4.12"
     },
     "autoload": {
         "classmap": [
