--- a/composer.json
+++ b/composer.json
@@ -18,95 +18,90 @@
         "ext-gmp": "*",
         "ext-json": "*",
         "ext-zip": "*",
-        "abdala/omnipay-pagseguro": "0.2",
-        "agmscode/omnipay-agms": "~1.0",
-        "anahkiasen/former": "4.*",
-        "andreas22/omnipay-fasapay": "1.*",
-        "asgrim/ofxparser": "^1.1",
-        "bacon/bacon-qr-code": "^1.0",
-        "barracudanetworks/archivestream-php": "^1.0",
-        "barryvdh/laravel-cors": "^1.0.6",
-        "barryvdh/laravel-debugbar": "~3.6.1",
-        "barryvdh/laravel-ide-helper": "~2.7",
-        "bramdevries/omnipay-paymill": "^1.0",
-        "cardgate/omnipay-cardgate": "~2.0",
-        "cerdic/css-tidy": "~v1.5",
-        "chumper/datatable": "dev-laravel6-support",
-        "cleverit/ubl_invoice": "1.*",
-        "codedge/laravel-selfupdater": "2.3.0",
+        "anahkiasen/former": ">=5",
+        "andreas22/omnipay-fasapay": ">=1.0.2",
+        "asgrim/ofxparser": ">=1.2.2",
+        "bacon/bacon-qr-code": ">=3.0.1",
+        "barracudanetworks/archivestream-php": ">=1.0.8",
+        "barryvdh/laravel-cors": ">=3",
+        "barryvdh/laravel-debugbar": ">=3.6.8",
+        "barryvdh/laravel-ide-helper": ">=2.8.2",
+        "bramdevries/omnipay-paymill": ">=1.0.2",
+        "cardgate/omnipay-cardgate": ">=2.0.1",
+        "cerdic/css-tidy": ">=2.2.1",
+        "chumper/datatable": "*",
+        "cleverit/ubl_invoice": ">=1.3",
+        "codedge/laravel-selfupdater": ">=3.2.1",
         "collizo4sky/omnipay-wepay": "dev-address-fix#942f3e0",
-        "delatbabel/omnipay-fatzebra": "dev-master",
-        "dercoder/omnipay-ecopayz": "~1.0",
-        "dercoder/omnipay-paysafecard": "dev-master",
-        "digitickets/omnipay-barclays-epdq": "~3.0",
-        "digitickets/omnipay-datacash": "~3.0",
+        "delatbabel/omnipay-fatzebra": ">=2.1.3",
+        "dercoder/omnipay-ecopayz": ">=1.0.2",
+        "dercoder/omnipay-paysafecard": ">=1",
+        "digitickets/omnipay-barclays-epdq": ">=3",
+        "digitickets/omnipay-datacash": ">=3",
         "digitickets/omnipay-gocardlessv2": "dev-payment-fix",
-        "digitickets/omnipay-realex": "~5.0",
-        "doctrine/dbal": "2.6.x",
-        "dompdf/dompdf": "^2.0",
-        "ezyang/htmlpurifier": "~v4.7",
-        "fotografde/omnipay-checkoutcom": "~2.0",
-        "fruitcakestudio/omnipay-sisow": "~2.0",
-        "fzaninotto/faker": "^1.5",
-        "google/apiclient": "^2.0",
-        "guzzlehttp/guzzle": "^6.5",
-        "guzzlehttp/psr7": "1.8.5",
-        "intervention/image": "dev-master",
-        "jaybizzle/laravel-crawler-detect": "1.*",
+        "digitickets/omnipay-realex": ">=5.1",
+        "doctrine/dbal": ">=2.13.9",
+        "dompdf/dompdf": ">=3.1",
+        "ezyang/htmlpurifier": ">=4.18",
+        "fotografde/omnipay-checkoutcom": ">=2.1.1",
+        "fruitcakestudio/omnipay-sisow": ">=2.0.4",
+        "fzaninotto/faker": ">=1.9.2",
+        "google/apiclient": ">=2.14",
+        "guzzlehttp/guzzle": ">=6.5.8",
+        "guzzlehttp/psr7": ">=1.9.1",
+        "intervention/image": ">=3.11.1",
+        "jaybizzle/laravel-crawler-detect": ">=1.3",
         "jlapp/swaggervel": "master-dev",
-        "jonnyw/php-phantomjs": "dev-fixes",
-        "justinbusschau/omnipay-secpay": "~2.0",
+        "jonnyw/php-phantomjs": ">=2.0.1",
+        "justinbusschau/omnipay-secpay": ">=2.0.6",
         "laracasts/presenter": "dev-master",
-        "laravel/framework": "^6.20",
-        "laravel/helpers": "^1.4",
-        "laravel/legacy-encrypter": "^1.0",
-        "laravel/socialite": "~4.4.1",
-        "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^6.2",
-        "league/csv": "^9.1",
-        "league/flysystem-aws-s3-v3": "~1.0",
-        "league/flysystem-rackspace": "~1.0",
-        "league/fractal": "0.13.*",
-        "lokielse/omnipay-alipay": "~1.4",
+        "laravel/framework": ">=6.20.45",
+        "laravel/helpers": ">=1.7.2",
+        "laravel/legacy-encrypter": ">=1",
+        "laravel/socialite": ">=5.17.1",
+        "laravel/tinker": ">=2.10.1",
+        "laravelcollective/html": ">=6.4.1",
+        "league/csv": ">=9.21",
+        "league/flysystem-aws-s3-v3": ">=1.0.30",
+        "league/flysystem-rackspace": ">=1.0.5",
+        "league/fractal": ">=0.20.1",
+        "lokielse/omnipay-alipay": ">=2.3.6",
         "maatwebsite/excel": "dev-php-fix",
         "meebio/omnipay-creditcall": "dev-master",
         "meebio/omnipay-secure-trading": "dev-master",
-        "mfauveau/omnipay-pacnet": "~2.0",
-        "mpdf/mpdf": "^8.0",
-        "nesbot/carbon": "^2.0",
-        "nwidart/laravel-modules": "2.0.*",
+        "mfauveau/omnipay-pacnet": ">=2.0.4",
+        "mpdf/mpdf": ">=8.2.5",
+        "nesbot/carbon": ">=2.72.6",
+        "nwidart/laravel-modules": ">=11.1.8",
         "omnipay/authorizenet": "dev-solution-id as 2.5.0",
-        "omnipay/bitpay": "dev-master",
-        "omnipay/braintree": "^1.1",
-        "omnipay/common": "2.5.2",
-        "omnipay/firstdata": "^2.4",
-        "omnipay/gocardless": "dev-master",
-        "omnipay/mollie": "3.*",
-        "omnipay/omnipay": "~2.3",
-        "omnipay/payfast": "~2.0",
-        "omnipay/stripe": "~2.0",
-        "patricktalmadge/bootstrapper": "5.12.x",
-        "pragmarx/google2fa-laravel": "0.1.4",
-        "predis/predis": "^1.1",
+        "omnipay/bitpay": ">=0.1.1",
+        "omnipay/braintree": ">=1.1.2",
+        "omnipay/common": ">=2.5.2",
+        "omnipay/firstdata": ">=2.4.1",
+        "omnipay/gocardless": ">=2.2",
+        "omnipay/mollie": ">=3.2",
+        "omnipay/omnipay": ">=2.3",
+        "omnipay/payfast": ">=2.2",
+        "omnipay/stripe": ">=2.4.7",
+        "patricktalmadge/bootstrapper": ">=5.12",
+        "pragmarx/google2fa-laravel": ">=2.2",
+        "predis/predis": ">=2.3",
         "simshaun/recurr": "dev-master",
-        "softcommerce/omnipay-paytrace": "~1.0",
-        "stripe/stripe-php": "^7",
-        "superbalist/laravel-google-cloud-storage": "^2.2",
-        "symfony/css-selector": "~3.1",
-        "therobfonz/laravel-mandrill-driver": "~1.0",
-        "turbo124/laravel-push-notification": "dev-master",
-        "vemcogroup/laravel-sparkpost-driver": "~2.0",
-        "vink/omnipay-komoju": "~1.0",
+        "stripe/stripe-php": ">=16.5.1",
+        "superbalist/laravel-google-cloud-storage": ">=2.2.4",
+        "symfony/css-selector": ">=7.2",
+        "therobfonz/laravel-mandrill-driver": ">=1.0.1",
+        "vemcogroup/laravel-sparkpost-driver": ">=3.0.1",
         "webpatser/laravel-countries": "dev-master#75992ad",
-        "wepay/php-sdk": "^0.2",
-        "wildbit/postmark-php": "^2.5"
+        "wepay/php-sdk": ">=0.3.1",
+        "wildbit/postmark-php": ">=5"
     },
     "require-dev": {
-        "symfony/dom-crawler": "~3.1",
-        "codeception/c3": "2.*",
-        "codeception/codeception": "2.*",
-        "phpspec/phpspec": "~6.1",
-        "phpunit/phpunit": "~5.7"
+        "symfony/dom-crawler": "^3.4.47",
+        "codeception/c3": ">=2.9",
+        "codeception/codeception": ">=5.1.2",
+        "phpspec/phpspec": "^6.3.1",
+        "phpunit/phpunit": ">=9.6.22"
     },
     "autoload": {
         "classmap": [
@@ -162,7 +157,8 @@
         "sort-packages": true,
         "optimize-autoloader": true,
         "allow-plugins": {
-            "codeception/c3": true
+            "codeception/c3": true,
+            "wikimedia/composer-merge-plugin": true
         }
     },
     "repositories": [
@@ -180,7 +176,7 @@
         },
         {
             "type": "vcs",
-            "url": "https://github.com/turbo124/chumper-datatable"
+            "url": "https://github.com/underdogg-forks/chumper-datatable"
         },
         {
             "type": "vcs",
@@ -204,7 +200,7 @@
         },
         {
             "type": "vcs",
-            "url": "https://github.com/turbo124/NotificationPusher"
+            "url": "https://github.com/underdogg-forks/laravel-push-notification"
         },
         {
             "type": "vcs",
