upgrade to L7 done, watch the packages to reinstall

--- a/composer.json
+++ b/composer.json
@@ -13,98 +13,74 @@
         }
     ],
     "require": {
-        "php": ">=7.3.0",
+        "php": "7.4.33",
         "ext-gd": "*",
         "ext-gmp": "*",
         "ext-json": "*",
         "ext-zip": "*",
-        "abdala/omnipay-pagseguro": "0.2",
-        "agmscode/omnipay-agms": "*",
-        "anahkiasen/former": "4.*",
-        "andreas22/omnipay-fasapay": "1.*",
-        "asgrim/ofxparser": "^1.1",
-        "bacon/bacon-qr-code": "^1.0",
-        "barracudanetworks/archivestream-php": "^1.0",
-        "barryvdh/laravel-cors": "^1.0.6",
+        "abdala/omnipay-pagseguro": "*",
+        "anahkiasen/former": "*",
+        "asgrim/ofxparser": "*",
+        "bacon/bacon-qr-code": "*",
+        "barracudanetworks/archivestream-php": "*",
+        "barryvdh/laravel-cors": "*",
         "barryvdh/laravel-debugbar": "*",
         "barryvdh/laravel-ide-helper": "*",
-        "bramdevries/omnipay-paymill": "^1.0",
         "cardgate/omnipay-cardgate": "*",
         "cerdic/css-tidy": "*",
-        "chumper/datatable": "dev-laravel6-support",
-        "cleverit/ubl_invoice": "1.*",
-        "codedge/laravel-selfupdater": "2.3.0",
-        "collizo4sky/omnipay-wepay": "dev-address-fix#942f3e0",
-        "delatbabel/omnipay-fatzebra": "dev-master",
-        "dercoder/omnipay-ecopayz": "*",
-        "dercoder/omnipay-paysafecard": "dev-master",
-        "digitickets/omnipay-barclays-epdq": "*",
-        "digitickets/omnipay-datacash": "*",
-        "digitickets/omnipay-gocardlessv2": "dev-payment-fix",
-        "digitickets/omnipay-realex": "*",
-        "doctrine/dbal": "2.6.x",
-        "dompdf/dompdf": "^2.0",
+        "chumper/datatable": "dev-laravel-8-beyond",
+        "cleverit/ubl_invoice": "*",
+        "codedge/laravel-selfupdater": "*",
+        "doctrine/dbal": "*",
+        "dompdf/dompdf": "*",
         "ezyang/htmlpurifier": "*",
-        "fotografde/omnipay-checkoutcom": "*",
         "fruitcakestudio/omnipay-sisow": "*",
-        "fzaninotto/faker": "^1.5",
-        "google/apiclient": "^2.0",
-        "guzzlehttp/guzzle": "^6.5",
-        "guzzlehttp/psr7": "1.8.5",
+        "fzaninotto/faker": "*",
+        "google/apiclient": "*",
+        "guzzlehttp/guzzle": "*",
+        "guzzlehttp/psr7": "*",
         "intervention/image": "*",
-        "jaybizzle/laravel-crawler-detect": "1.*",
+        "jaybizzle/laravel-crawler-detect": "*",
         "jlapp/swaggervel": "master-dev",
-        "jonnyw/php-phantomjs": "dev-fixes",
-        "justinbusschau/omnipay-secpay": "*",
         "laracasts/presenter": "dev-master",
-        "laravel/framework": "^6.20",
-        "laravel/helpers": "^1.4",
-        "laravel/legacy-encrypter": "^1.0",
+        "laravel/framework": "^7.0",
+        "laravel/helpers": "*",
+        "laravel/legacy-encrypter": "*",
         "laravel/socialite": "*",
-        "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^6.2",
-        "league/csv": "^9.1",
+        "laravel/tinker": "*",
+        "laravelcollective/html": "*",
+        "league/csv": "9.1",
         "league/flysystem-aws-s3-v3": "*",
         "league/flysystem-rackspace": "*",
-        "league/fractal": "0.13.*",
+        "league/fractal": "*",
         "lokielse/omnipay-alipay": "*",
         "maatwebsite/excel": "dev-php-fix",
-        "meebio/omnipay-creditcall": "dev-master",
-        "meebio/omnipay-secure-trading": "dev-master",
-        "mfauveau/omnipay-pacnet": "*",
-        "mpdf/mpdf": "^8.0",
-        "nesbot/carbon": "^2.0",
-        "nwidart/laravel-modules": "2.0.*",
-        "omnipay/authorizenet": "dev-solution-id as 2.5.0",
-        "omnipay/bitpay": "dev-master",
-        "omnipay/braintree": "^1.1",
-        "omnipay/common": "2.5.2",
-        "omnipay/firstdata": "^2.4",
-        "omnipay/gocardless": "dev-master",
-        "omnipay/mollie": "3.*",
+        "mpdf/mpdf": "*",
+        "nesbot/carbon": "*",
+        "nwidart/laravel-modules": "*",
+        "omnipay/braintree": "*",
+        "omnipay/common": "^3.0",
+        "omnipay/mollie": "*",
         "omnipay/omnipay": "*",
         "omnipay/payfast": "*",
         "omnipay/stripe": "*",
-        "patricktalmadge/bootstrapper": "5.12.x",
-        "pragmarx/google2fa-laravel": "0.1.4",
-        "predis/predis": "^1.1",
+        "patricktalmadge/bootstrapper": "*",
+        "pragmarx/google2fa-laravel": "*",
+        "predis/predis": "*",
         "simshaun/recurr": "dev-master",
-        "softcommerce/omnipay-paytrace": "*",
-        "stripe/stripe-php": "^7",
-        "superbalist/laravel-google-cloud-storage": "^2.2",
+        "stripe/stripe-php": "*",
+        "superbalist/laravel-google-cloud-storage": "*",
         "symfony/css-selector": "*",
         "therobfonz/laravel-mandrill-driver": "*",
-        "turbo124/laravel-push-notification": "dev-master",
         "vemcogroup/laravel-sparkpost-driver": "*",
-        "vink/omnipay-komoju": "*",
         "webpatser/laravel-countries": "dev-master#75992ad",
-        "wepay/php-sdk": "^0.2",
-        "wildbit/postmark-php": "^2.5"
+        "wepay/php-sdk": "*",
+        "wildbit/postmark-php": "*"
     },
     "require-dev": {
         "symfony/dom-crawler": "*",
-        "codeception/c3": "2.*",
-        "codeception/codeception": "2.*",
+        "codeception/c3": "*",
+        "codeception/codeception": "*",
         "phpspec/phpspec": "*",
         "phpunit/phpunit": "*"
     },
@@ -162,7 +138,8 @@
         "sort-packages": true,
         "optimize-autoloader": true,
         "allow-plugins": {
-            "codeception/c3": true
+            "codeception/c3": true,
+            "php-http/discovery": true
         }
     },
     "repositories": [
@@ -180,7 +157,7 @@
         },
         {
             "type": "vcs",
-            "url": "https://github.com/turbo124/chumper-datatable"
+            "url": "https://github.com/underdogg-forks/chumper-datatable"
         },
         {
             "type": "vcs",
@@ -200,7 +177,7 @@
         },
         {
             "type": "vcs",
-            "url": "https://github.com/turbo124/laravel-push-notification"
+            "url": "https://github.com/underdogg-forks/laravel-push-notification"
         },
         {
             "type": "vcs",
