--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
         "fruitcakestudio/omnipay-sisow": "*",
         "fzaninotto/faker": "*",
         "google/apiclient": "*",
-        "guzzlehttp/guzzle": "*",
+        "guzzlehttp/guzzle": "^7.9",
         "guzzlehttp/psr7": "*",
         "intervention/image": "*",
         "jaybizzle/laravel-crawler-detect": "*",
@@ -46,7 +46,7 @@
         "laravel/framework": "^8.0",
         "laravel/helpers": "*",
         "laravel/legacy-encrypter": "*",
-        "laravel/socialite": "*",
+        "laravel/socialite": "^5.17",
         "laravel/tinker": "*",
         "laravelcollective/html": "*",
         "league/csv": "9.1",
@@ -80,7 +80,7 @@
         "codeception/c3": "*",
         "codeception/codeception": "*",
         "phpspec/phpspec": "*",
-        "phpunit/phpunit": "*"
+        "phpunit/phpunit": "^9.6"
     },
     "autoload": {
         "classmap": [
@@ -94,6 +94,8 @@
         ],
         "psr-4": {
             "App\\": "app/",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/",
             "Modules\\": "Modules/"
         },
         "files": [
