--- a/composer.json
+++ b/composer.json
@@ -26,72 +26,72 @@
         "bacon/bacon-qr-code": ">=3.0.1",
         "barracudanetworks/archivestream-php": ">=1.0.8",
         "barryvdh/laravel-cors": "*",
-        "braintree/braintree_php": "^6.21",
-        "cerdic/css-tidy": ">=2.1",
+        "braintree/braintree_php": "^6.23",
+        "cerdic/css-tidy": ">=2.2.1",
         "chumper/datatable": "dev-laravel-8-beyond",
         "cleverit/ubl_invoice": ">=1.3",
         "codedge/laravel-selfupdater": "^3.9",
-        "doctrine/dbal": "^3.9",
-        "dompdf/dompdf": ">=3",
-        "ezyang/htmlpurifier": ">=4.17",
-        "google/apiclient": ">=2.17",
+        "doctrine/dbal": "^3.9.4",
+        "dompdf/dompdf": ">=3.1",
+        "ezyang/htmlpurifier": ">=4.18",
+        "google/apiclient": ">=2.18.2",
         "guzzlehttp/guzzle": "^7.9.2",
         "guzzlehttp/psr7": ">=2.7",
-        "intervention/image": ">=3.8",
-        "intervention/image-laravel": ">=1.3",
+        "intervention/image": ">=3.11.1",
+        "intervention/image-laravel": ">=1.4",
         "jlapp/swaggervel": "*",
         "laracasts/presenter": "dev-master",
         "laravel-notification-channels/pusher-push-notifications": "^4.2",
-        "laravel/framework": "^10.48",
-        "laravel/helpers": ">=1.7",
+        "laravel/framework": "^10.48.28",
+        "laravel/helpers": ">=1.7.2",
         "laravel/legacy-encrypter": ">=1",
-        "laravel/slack-notification-channel": "*",
-        "laravel/socialite": ">=5.16",
-        "laravel/ui": ">=4.5.2",
-        "league/csv": ">=9.16",
-        "league/flysystem-aws-s3-v3": "*",
+        "laravel/slack-notification-channel": ">=3.4.4",
+        "laravel/socialite": ">=5.17.1",
+        "laravel/ui": ">=4.6.1",
+        "league/csv": ">=9.21",
+        "league/flysystem-aws-s3-v3": ">=3.29",
         "league/fractal": ">=0.20.1",
         "maatwebsite/excel": "dev-php-fix",
-        "mpdf/mpdf": ">=8.2.4",
-        "nesbot/carbon": ">=2.72.5",
+        "mpdf/mpdf": ">=8.2.5",
+        "nesbot/carbon": ">=2.72.6",
         "nwidart/laravel-modules": "2.0.*",
         "omnipay/common": "^3.1@dev",
         "patricktalmadge/bootstrapper": "dev-l10-compatibility",
-        "php-http/httplug": "^2.4",
+        "php-http/httplug": "^2.4.1",
         "pragmarx/google2fa-laravel": ">=2.2",
-        "predis/predis": ">=2.2.2",
+        "predis/predis": ">=2.3.0",
         "simshaun/recurr": "dev-master",
         "spatie/laravel-html": ">=3.5",
         "stripe/stripe-php": ">=16.1",
-        "symfony/css-selector": ">=6.4.8",
-        "symfony/http-client": ">=6.4.12",
-        "symfony/mailer": ">=6.4.12",
-        "symfony/postmark-mailer": ">=6.4.8",
+        "symfony/css-selector": ">=6.4.13",
+        "symfony/http-client": ">=6.4.18",
+        "symfony/mailer": ">=6.4.18",
+        "symfony/postmark-mailer": ">=6.4.13",
         "therobfonz/laravel-mandrill-driver": ">=5.1",
         "vemcogroup/laravel-sparkpost-driver": "^5.0.8",
         "webpatser/laravel-countries": "dev-master#75992ad",
-        "wepay/php-sdk": "*",
-        "wildbit/postmark-php": "*"
+        "wepay/php-sdk": ">=0.3.1",
+        "wildbit/postmark-php": ">=6.0.9"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": ">=3.14.3",
+        "barryvdh/laravel-debugbar": ">=3.14.10",
         "barryvdh/laravel-ide-helper": "^3.1",
         "codeception/c3": ">=2.9",
         "codeception/codeception": ">=5.1.2",
-        "driftingly/rector-laravel": "^1.2.4",
-        "fakerphp/faker": ">=1.23.1",
-        "filp/whoops": ">=2.16",
-        "jonnyw/php-phantomjs": "*",
-        "larastan/larastan": "^2.9",
+        "driftingly/rector-laravel": "^1.2.6",
+        "fakerphp/faker": ">=1.24.1",
+        "filp/whoops": ">=2.17",
+        "jonnyw/php-phantomjs": ">=2.0.1",
+        "larastan/larastan": "^2.9.14",
         "laravel/pint": "dev-feat/blade",
-        "laravel/tinker": ">=2.10",
+        "laravel/tinker": ">=2.10.1",
         "nunomaduro/collision": "^6.4",
         "phpspec/phpspec": ">=7.5",
         "phpunit/phpunit": ">=10.5.35",
-        "rector/rector": "*",
+        "rector/rector": ">=1.2.10",
         "rector/type-perfect": "^1.0",
-        "spatie/laravel-ignition": ">=2.8",
-        "symfony/dom-crawler": ">=6.4.12"
+        "spatie/laravel-ignition": ">=2.9",
+        "symfony/dom-crawler": ">=6.4.18"
     },
     "autoload": {
         "classmap": [
