--- a/.env.example
+++ b/.env.example
@@ -1,34 +1,29 @@
 APP_ENV=local
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=http://www.ninja.test
 APP_KEY=SomeRandomStringSomeRandomString
 APP_CIPHER=AES-256-CBC
 APP_LOCALE=en
-
 DB_TYPE=mysql
 DB_STRICT=false
 DB_HOST=localhost
 DB_DATABASE=ninja
 DB_USERNAME=ninja
 DB_PASSWORD=ninja
-
 MAIL_DRIVER=smtp
 MAIL_PORT=587
 MAIL_ENCRYPTION=tls
-MAIL_HOST
-MAIL_USERNAME
-MAIL_FROM_ADDRESS
-MAIL_FROM_NAME
-MAIL_PASSWORD
-
+MAIL_HOST=
+MAIL_USERNAME=
+MAIL_FROM_NAME=
+MAIL_FROM_ADDRESS=
+MAIL_PASSWORD=
+PHANTOMJS_CLOUD_KEY='a-demo-key-with-low-quota-per-ip-address'
+PHANTOMJS_SECRET=f4tychmtnu4ymxvrfmg4jif8syxves4j
 MAILGUN_DOMAIN=
 MAILGUN_SECRET=
-
-#POSTMARK_API_TOKEN=
-
-PHANTOMJS_CLOUD_KEY='a-demo-key-with-low-quota-per-ip-address'
 #PHANTOMJS_BIN_PATH=/usr/local/bin/phantomjs
-
+#POSTMARK_API_TOKEN=
 LOG=single
 REQUIRE_HTTPS=false
 API_SECRET=password
