--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,44 +1,23 @@
 parameters:
-    level: 0
+    tmpDir: null
     paths:
-        - app
-        - Modules
+        - Modules/
+
     ignoreErrors:
-        - '#Result of method .*::.*\(\) \(void\) is used#'
-        - '#Method .*::.* should return .* but return statement is missing#'
-        - '#Method .*::.*\(\) should return .* but return statement is missing#'
-        - '#Access to an undefined property .*::.*#'
-        - '#Access to an undefined property .*::\$.*#'
-        - '#Access to an undefined static property .*::\$.*#'
-        - '#Anonymous function has invalid return type .*#'
-        - '#Call to an undefined method Illuminate\\.*#'
-        - '#Call to an undefined method .*::.*\(\)#'
-        - '#Call to an undefined static method .*::.*\(\)#'
-        - '#Call to an undefined static method Intervention\\\\Image\\\\Laravel\\\\Facades\\\\Image::.*\(\)#'
-        - '#Call to static method .* on an unknown class .*#'
-        - '#Class Illuminate\\.* not found#'
-        - '#Class .* not found#'
-        - '#Dynamic property .* not found#'
-        - '#Instantiated class .* not found#'
-        - '#Method .* but return statement is missing#'
-        - '#Method .* not found in Laravel container#'
-        - '#Method .*::.* should return .* but return statement is missing#'
-        - '#Method .*::.*\\(\\) should return .* but return statement is missing#'
-        - '#Method .*::.*\(\) invoked with \d+ parameters, \d+ required#'
-        - '#Method .*::.*\(\) should return .* but return statement is missing#'
-        - '#Relation .* is not found in App\\\\Models\\\\.* model#'
-        - "#Relation '.*' is not found in App\\\\Models\\\\.* model#"
-        - '#Removing parent param type is forbidden#'
-        - '#Result of method .*::.*\\(\\) \\(void\\) is used#'
-        - '#Static call to instance method .*::.*\(\)#'
-        - '#Use explicit methods over array access on object#'
-        - '#Variable .* might not be defined#'
-        - '#Variable .* on left side of \?\? is never defined#'
-        - '#Variable \\\$.* might not be defined#'
-    excludePaths:
-        - bootstrap/cache/**
-        - database/factories/**
-        - database/migrations/**
-        - public/**
-        - storage/**
-        - vendor/**
+        - '#Access to an undefined property .*::\$[a-zA-Z_]+#'
+        - '#Call to an undefined method .*#'
+        - '#Call to an undefined static method .*::.*#'
+        - '#Match arm is unreachable because previous comparison is always true.#'
+        - '#Method [A-Za-z0-9_\\\\]+::[A-Za-z0-9_]+\\(\\) has an unused parameter \$[a-zA-Z_]+#'
+        - '#Method .*::scope[A-Za-z0-9_]+\\(\\) should return Illuminate\\\\Contracts\\\\Database\\\\Eloquent\\\\Builder but returns Illuminate\\\\Database\\\\Query\\\\Builder#'
+        - '#Method .*::scope[A-Za-z0-9_]+\(\) should return Illuminate\\Contracts\\Database\\Eloquent\\Builder but returns Illuminate\\Database\\Query\\Builder#'
+        - '#Parameter \#1 \$user of static method Laravel\\Sanctum\\Sanctum::actingAs\(\) expects Illuminate\\Contracts\\Auth\\Authenticatable\|Laravel\\Sanctum\\HasApiTokens, Illuminate\\Database\\Eloquent\\Collection<int, Illuminate\\Database\\Eloquent\\Model>\|Illuminate\\Database\\Eloquent\\Model given.#'
+        - '#Parameter \#1 \$user of method Illuminate\\Foundation\\Testing\\TestCase::actingAs\(\) expects Illuminate\\Contracts\\Auth\\Authenticatable, Illuminate\\Database\\Eloquent\\Collection<int, Illuminate\\Database\\Eloquent\\Model>\|Illuminate\\Database\\Eloquent\\Model given.#'
+        - '#Parameter \$user of method Illuminate\\Foundation\\Testing\\TestCase::actingAs\(\) expects Illuminate\\Contracts\\Auth\\Authenticatable, Illuminate\\Database\\Eloquent\\Collection<int, Illuminate\\Database\\Eloquent\\Model>\|Illuminate\\Database\\Eloquent\\Model given.#'
+        - '#Property Modules\\Core\\Models\\User::\$[a-zA-Z_]+ is never read, only written.#'
+        - '#Result of method .*::getFieldsSearchable\(\) \(void\) is used#'
+        - '#Result of method .+::getFieldsSearchable\\(\\) \\(void\\) is used#'
+        - '#Unreachable statement - code above always terminates.#'
+
+    reportUnmatchedIgnoredErrors: false
+    level: 5
